--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Torrent Web",
   "description": "Easily download torrents directly over http with this self-hosted app",
-  "repository": "https://github.com/dum.01234x/torrent-web",
+  "repository": "https://github.com/dum1234x/torrent-web",
   "logo": "http://i.imgur.com/fdzPLb2.png",
   "keywords": ["node", "torrent", "proxy"]
 }
